--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li>Lesson 07:<a href="lesson7/gallery.html">Weather Gallery</a></li>
                 <li>Lesson 08:<a href="lesson8/stormcenter.html">Storm Center</a></li>
                 <li>Lesson 09:<a href="lesson9/activity/prophets.html">JSON Activity</a></li>
-                <li>Lesson 09:<a href="lesson9/activity/home page\index.html">Home Page</a></li>
+                <li>Lesson 09:<a href="lesson9/home/index.html">Home Page</a></li>
 
             </ul>
         </main>
