--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -23,12 +23,12 @@
     <nav>
         <ul class="navigation">
             <li><a class="ham" href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/lesson9/home/index.html">Home</a></li>
             <li><a class="current" href="#">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
-            <li><a href="#">Storm Center</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="/lesson8/stormcenter.html">Storm Center</a></li>
+            <li><a href="/lesson7/gallery.html">Gallery</a></li>
         </ul> 
     </nav>
         <main>
