--- a/lesson7/gallery.html
+++ b/lesson7/gallery.html
@@ -18,11 +18,11 @@
     <nav>
         <ul class="navigation">
             <li><a class="ham" href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="preston-5.html">Preston</a></li>
+            <li><a href="/lesson9/home/index.html">Home</a></li>
+            <li><a href="/lesson5/preston-5.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
-            <li><a href="#">Storm Center</a></li>
+            <li><a href="/lesson8/stormcenter.html">Storm Center</a></li>
             <li><a class="current" href="#">Gallery</a></li>
         </ul> 
     </nav>
