--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li>Lesson 08:<a href="lesson8/stormcenter.html">Storm Center</a></li>
                 <li>Lesson 09:<a href="lesson9/activity/prophets.html">JSON Activity</a></li>
                 <li>Lesson 09:<a href="lesson9/home/index.html">Home Page</a></li>
-
+                <li>Lesson 10:<a href="lesson10/preston-10.html">Preston Weather API</a></li>
             </ul>
         </main>
     <footer>
