--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                 <li>Lesson 09:<a href="lesson9/activity/prophets.html">JSON Activity</a></li>
                 <li>Lesson 09:<a href="lesson9/home/index.html">Home Page</a></li>
                 <li>Lesson 10:<a href="lesson10/preston-10.html">Preston Weather API</a></li>
+                <li>Lesson 11:<a href="lesson11/preston-10.html">Weather Outlet Final</a></li>
+
             </ul>
         </main>
     <footer>
