--- a/lesson11/lesson10/preston-10.html
+++ b/lesson11/lesson10/preston-10.html
@@ -23,12 +23,12 @@
     <nav>
         <ul class="navigation">
             <li><a class="ham" href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
-            <li><a href="/lesson11/lesson9/home/index.html">Home</a></li>
+            <li><a href="../lesson9/home/index.html">Home</a></li>
             <li><a class="current" href="">Preston</a></li>
-            <li><a href="#">Soda Springs</a></li>
-            <li><a href="#">Fish Haven</a></li>
-            <li><a href="/lesson8/stormcenter.html">Storm Center</a></li>
-            <li><a href="/lesson7/gallery.html">Gallery</a></li>
+            <li><a href="../sodasprings/sodasprings.html">Soda Springs</a></li>
+            <li><a href="../fishhaven/fishhaven.html">Fish Haven</a></li>
+            <li><a href="../lesson8/stormcenter.html">Storm Center</a></li>
+            <li><a href="../lesson7/gallery.html">Gallery</a></li>
         </ul> 
     </nav>
         <main>
@@ -77,26 +77,23 @@
             </div>
             </table>
         </article>
+        <div class="local-events"></div>
             <section>
                 <h4 class="art">Our Real Heros</h4>
                 <img src="images/hero.jpg" class="firstline" alt="med">
                 <p class="article">
                     Kim, 32, was a photographer before becoming a paramedic in 2016. He had been an EMT for 13 years, 
-                    then took the additional year-plus of study to gain the higher certification. One of the skills he 
-                    learned is intubation—placing a breathing tube down an airway. With a virus that inhabits the throat, 
-                    it’s a procedure that creates exceptional risks for the caregiver. So far, three of Kim’s colleagues, 
+                    then took the additional year-plus of study to gain the higher certification. So far, three of Kim’s colleagues, 
                     all older, have tested positive. It reinforced his decision to make a visual record of the work they are all doing. 
                     “I want our story to be told from us directly,” he says.<br>
                     He made this diary over seven days, starting March 30. “As the week progressed, it felt like I was seeing a lot more sick people,
-                    ” Kim says. “It seemed to be escalating.” Before entering a home, he puts on an N95 mask, then a surgical mask. “At least two pairs of gloves.” 
-                    Then a disposable gown. For the sake of risk and equipment, which must be discarded after each call, only one paramedic goes in. Sometimes there’s 
-                    nothing you can do. At one nursing home, a woman in her early 90s was already cold to the touch, with signs of rigor.<br>
-                    Halfway through the week, Kim was also pressed into service in the ICU wards the hospital had built as the virus bore down. 
+                    ”,“It seemed to be escalating.” Before entering a home, he puts on an N95 mask, then a surgical mask. “At least two pairs of gloves.” 
+                    Then a disposable gown. For the sake of risk and equipment, which must be discarded after each call, only one paramedic goes in. At one nursing home 
+                    a woman in her early 90s was already cold to the touch, with signs of rigor.<br> 
                     The ER “looks like something from The Matrix, we have so much equipment out,” but the new ICUs remind him of actual film sets—all new timber and 
                     exposed sheetrock walls, built ingeniously so that nurses and doctors can adjust medicines and settings without entering the room. <br>
                     The next day, a fellow paramedic spiked a fever and got tested. “The thought definitely crosses my mind. Am I carrying the virus? Am I bringing it 
-                    home and exposing my wife to it? I think about that,” Kim says, “but I try not to let that thought consume me while I’m home because that’s my time 
-                    to not think about everything.” —Karl Vick
+                    home and exposing my wife to it? I think about that, but I try not to let that thought consume me while I’m home.” —Karl Vick
                 </p>
             </section>
             <section class="contact">
@@ -120,5 +117,6 @@
         <script src="javascript/weatherapi.js"></script>
         <script onload="windChill()" src="javascript/windchill.js"></script>
         <script src="javascript/forecast.js"></script>
+        <script src="javascript/events.js"></script>
     </body>
 </html>
