updated java for events

--- a/lesson11/lesson10/preston-10.html
+++ b/lesson11/lesson10/preston-10.html
@@ -77,7 +77,9 @@
             </div>
             </table>
         </article>
-        <div class="local-events"></div>
+        <div class="local-events">
+            <h4 class="art">Events Coming Up</h4>
+        </div>
             <section>
                 <h4 class="art">Our Real Heros</h4>
                 <img src="images/hero.jpg" class="firstline" alt="med">
