--- a/lesson11/fishhaven/fishhaven.html
+++ b/lesson11/fishhaven/fishhaven.html
@@ -34,7 +34,7 @@
         <main>
             <div class="hero">
               <picture>
-                <img src="images/lake.jpeg" class="hero" alt="lake">
+                <img src="images/fish.jpg" class="hero" alt="lake">
                 </picture>
                 <h2>Fish Haven Idaho</h2>
                 <section class="overlay">
@@ -77,22 +77,18 @@
             </div>
             </table>
         </article>
+        <div class="local-events">
+            <h3>Events Coming Up</h3>
+        </div>
             <section>
-                <h4 class="art">Our Real Heros</h4>
-                <img src="images/hero.jpg" class="firstline" alt="med">
+                <h3>Fair Will Continue for Youth</h3>
+                <img src="images/fair.jpg" class="fair" alt="kids">
                 <p class="article">
-                    Kim, 32, was a photographer before becoming a paramedic in 2016. He had been an EMT for 13 years, 
-                    then took the additional year-plus of study to gain the higher certification. So far, three of Kim’s colleagues, 
-                    all older, have tested positive. It reinforced his decision to make a visual record of the work they are all doing. 
-                    “I want our story to be told from us directly,” he says.<br>
-                    He made this diary over seven days, starting March 30. “As the week progressed, it felt like I was seeing a lot more sick people,
-                    ”,“It seemed to be escalating.” Before entering a home, he puts on an N95 mask, then a surgical mask. “At least two pairs of gloves.” 
-                    Then a disposable gown. For the sake of risk and equipment, which must be discarded after each call, only one paramedic goes in. At one nursing home 
-                    a woman in her early 90s was already cold to the touch, with signs of rigor.<br> 
-                    The ER “looks like something from The Matrix, we have so much equipment out,” but the new ICUs remind him of actual film sets—all new timber and 
-                    exposed sheetrock walls, built ingeniously so that nurses and doctors can adjust medicines and settings without entering the room. <br>
-                    The next day, a fellow paramedic spiked a fever and got tested. “The thought definitely crosses my mind. Am I carrying the virus? Am I bringing it 
-                    home and exposing my wife to it? I think about that, but I try not to let that thought consume me while I’m home.” —Karl Vick
+                    The Bear Lake Junior Livestock Committee and 4-H Personnel met Thursday evening to make plans to move forward with a reduced version of the fair. 
+                    The County Commissioners realize the kids have put in countless hours raising and working with their animals to be ready for the fair 
+                    and feel we can safely have all the 4-H and FFA activities. The fair is a culminating event that marks the end of countless hours of hard work, 
+                    effort, and learning. 4-H and FFA livestock projects effectively help youth develop critical life skills such as accepting responsibility, 
+                    getting along with others, setting goals, decision making, and interpersonal skills.
                 </p>
             </section>
             <section class="contact">
@@ -116,5 +112,6 @@
         <script src="javascript/weatherapi.js"></script>
         <script onload="windChill()" src="javascript/windchill.js"></script>
         <script src="javascript/forecast.js"></script>
+        <script src="javascript/events.js"></script>
     </body>
 </html>
