--- a/lesson11/sodasprings/sodasprings.html
+++ b/lesson11/sodasprings/sodasprings.html
@@ -23,18 +23,18 @@
     <nav>
         <ul class="navigation">
             <li><a class="ham" href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
-            <li><a href="../lesson9/home/index.html">Home</a></li>
-            <li><a href="../lesson10/preston-10.html">Preston</a></li>
+            <li><a href="/lesson11/lesson9/home/index.html">Home</a></li>
+            <li><a href="/lesson11/lesson10/preston-10.html">Preston</a></li>
             <li><a class="current" href="#">Soda Springs</a></li>
-            <li><a href="../fishhaven/fishhaven.html">Fish Haven</a></li>
-            <li><a href="../lesson8/stormcenter.html">Storm Center</a></li>
-            <li><a href="../lesson7/gallery.html">Gallery</a></li>
+            <li><a href="/lesson11/fishhaven/fishhaven.html">Fish Haven</a></li>
+            <li><a href="/lesson11/lesson8/stormcenter.html">Storm Center</a></li>
+            <li><a href="/lesson11/lesson7/gallery.html">Gallery</a></li>
         </ul> 
     </nav>
         <main>
             <div class="hero">
               <picture>
-                <img src="images/lake.jpeg" class="hero" alt="lake">
+                <img src="images/gyser.jpg" class="hero" alt="lake">
                 </picture>
                 <h2>Soda Srings Idaho</h2>
                 <section class="overlay">
@@ -77,22 +77,22 @@
             </div>
             </table>
         </article>
+        <div class="local-events">
+            <h3>Events Coming Up</h3>
+        </div>
             <section>
-                <h4 class="art">Our Real Heros</h4>
-                <img src="images/hero.jpg" class="firstline" alt="med">
+                <h3>Garth Brooks Preview</h3>
+                <img src="images/drivein.jpg" class="music" alt="drive-in">
                 <p class="article">
-                    Kim, 32, was a photographer before becoming a paramedic in 2016. He had been an EMT for 13 years, 
-                    then took the additional year-plus of study to gain the higher certification. So far, three of Kim’s colleagues, 
-                    all older, have tested positive. It reinforced his decision to make a visual record of the work they are all doing. 
-                    “I want our story to be told from us directly,” he says.<br>
-                    He made this diary over seven days, starting March 30. “As the week progressed, it felt like I was seeing a lot more sick people,
-                    ”,“It seemed to be escalating.” Before entering a home, he puts on an N95 mask, then a surgical mask. “At least two pairs of gloves.” 
-                    Then a disposable gown. For the sake of risk and equipment, which must be discarded after each call, only one paramedic goes in. At one nursing home 
-                    a woman in her early 90s was already cold to the touch, with signs of rigor.<br> 
-                    The ER “looks like something from The Matrix, we have so much equipment out,” but the new ICUs remind him of actual film sets—all new timber and 
-                    exposed sheetrock walls, built ingeniously so that nurses and doctors can adjust medicines and settings without entering the room. <br>
-                    The next day, a fellow paramedic spiked a fever and got tested. “The thought definitely crosses my mind. Am I carrying the virus? Am I bringing it 
-                    home and exposing my wife to it? I think about that, but I try not to let that thought consume me while I’m home.” —Karl Vick
+                    Garth Brooks showed up on the big screen at a local drive-in over the weekend. 
+                    The Idan-Ha' Drive-in Theatre in Soda Springs played over an hour of Garth Brooks on their screen for tailgaters. 
+                    About 98 cars full of people showed up to watch the pre-recorded concert of Brooks. 
+                    The owner of the drive-in theatre says it was similar to experiencing a movie at the drive-in. 
+                    “We did our due diligence to maintain that six-foot social distancing if you will, so, but yeah it was kind of a fun night.  
+                    It did rain on us a little bit, right at first but it really sparked the enthusiasm when the ‘Thunder Rolls’ 
+                    came on by Garth Brooks and it just made it real feeling and brought a lot of electricity in the air and people were singing and dancing.  
+                    It was crazy.  It was a pretty good time,” says Jared Davis, Idan-Ha Drive-In Theatre. 
+                    The owner says he hopes they can do more of these types of shows again.
                 </p>
             </section>
             <section class="contact">
@@ -116,5 +116,6 @@
         <script src="javascript/weatherapi.js"></script>
         <script onload="windChill()" src="javascript/windchill.js"></script>
         <script src="javascript/forecast.js"></script>
+        <script src="javascript/events.js"></script>
     </body>
 </html>
