--- a/lesson11/lesson10/preston-10.html
+++ b/lesson11/lesson10/preston-10.html
@@ -23,18 +23,18 @@
     <nav>
         <ul class="navigation">
             <li><a class="ham" href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
-            <li><a href="../lesson9/home/index.html">Home</a></li>
+            <li><a href="/lesson11/lesson9/home/index.html">Home</a></li>
             <li><a class="current" href="">Preston</a></li>
-            <li><a href="../sodasprings/sodasprings.html">Soda Springs</a></li>
-            <li><a href="../fishhaven/fishhaven.html">Fish Haven</a></li>
-            <li><a href="../lesson8/stormcenter.html">Storm Center</a></li>
-            <li><a href="../lesson7/gallery.html">Gallery</a></li>
+            <li><a href="/lesson11/sodasprings/sodasprings.html">Soda Springs</a></li>
+            <li><a href="/lesson11/fishhaven/fishhaven.html">Fish Haven</a></li>
+            <li><a href="/lesson11/lesson8/stormcenter.html">Storm Center</a></li>
+            <li><a href="/lesson11/lesson7/gallery.html">Gallery</a></li>
         </ul> 
     </nav>
         <main>
             <div class="hero">
               <picture>
-                <img src="images/lake.jpeg" class="hero" alt="lake">
+                <img src="images/lake.jpg" class="hero" alt="lake">
                 </picture>
                 <h2>Preston Idaho</h2>
                 <section class="overlay">
@@ -78,10 +78,10 @@
             </table>
         </article>
         <div class="local-events">
-            <h4 class="art">Events Coming Up</h4>
+            <h3 class="art">Events Coming Up</h3>
         </div>
             <section>
-                <h4 class="art">Our Real Heros</h4>
+                <h3>Our Real Heros</h3>
                 <img src="images/hero.jpg" class="firstline" alt="med">
                 <p class="article">
                     Kim, 32, was a photographer before becoming a paramedic in 2016. He had been an EMT for 13 years, 
