--- a/lesson11/lesson7/gallery.html
+++ b/lesson11/lesson7/gallery.html
@@ -18,11 +18,11 @@
     <nav>
         <ul class="navigation">
             <li><a class="ham" href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
-            <li><a href="../lesson9/home/index.html">Home</a></li>
-            <li><a href="../lesson10/preston-10.html">Preston</a></li>
-            <li><a href="../sodasprings/sodasprings.html">Soda Springs</a></li>
-            <li><a href="../fishhaven/fishhaven.html">Fish Haven</a></li>
-            <li><a href="../lesson8/stormcenter.html">Storm Center</a></li>
+            <li><a href="/lesson11/lesson9/home/index.html">Home</a></li>
+            <li><a href="/lesson11/lesson10/preston-10.html">Preston</a></li>
+            <li><a href="/lesson11/sodasprings/sodasprings.html">Soda Springs</a></li>
+            <li><a href="/lesson11/fishhaven/fishhaven.html">Fish Haven</a></li>
+            <li><a href="/lesson11/lesson8/stormcenter.html">Storm Center</a></li>
             <li><a class="current" href="#">Gallery</a></li>
         </ul> 
     </nav>
