--- a/lesson11/sodasprings/sodasprings.html
+++ b/lesson11/sodasprings/sodasprings.html
@@ -86,7 +86,7 @@
                 <p class="article">
                     Garth Brooks showed up on the big screen at a local drive-in over the weekend. 
                     The Idan-Ha' Drive-in Theatre in Soda Springs played over an hour of Garth Brooks on their screen for tailgaters. 
-                    About 98 cars full of people showed up to watch the pre-recorded concert of Brooks. 
+                    About 98 cars full of people showed up to watch the pre-recorded concert of Brooks.<br> <br> 
                     The owner of the drive-in theatre says it was similar to experiencing a movie at the drive-in. 
                     “We did our due diligence to maintain that six-foot social distancing if you will, so, but yeah it was kind of a fun night.  
                     It did rain on us a little bit, right at first but it really sparked the enthusiasm when the ‘Thunder Rolls’ 
