--- a/lesson11/lesson10/preston-10.html
+++ b/lesson11/lesson10/preston-10.html
@@ -87,11 +87,11 @@
                     Kim, 32, was a photographer before becoming a paramedic in 2016. He had been an EMT for 13 years, 
                     then took the additional year-plus of study to gain the higher certification. So far, three of Kim’s colleagues, 
                     all older, have tested positive. It reinforced his decision to make a visual record of the work they are all doing. 
-                    “I want our story to be told from us directly,” he says.<br>
+                    “I want our story to be told from us directly,” he says.<br><br>
                     He made this diary over seven days, starting March 30. “As the week progressed, it felt like I was seeing a lot more sick people,
                     ”,“It seemed to be escalating.” Before entering a home, he puts on an N95 mask, then a surgical mask. “At least two pairs of gloves.” 
                     Then a disposable gown. For the sake of risk and equipment, which must be discarded after each call, only one paramedic goes in. At one nursing home 
-                    a woman in her early 90s was already cold to the touch, with signs of rigor.<br> 
+                    a woman in her early 90s was already cold to the touch, with signs of rigor.<br><br>
                     The ER “looks like something from The Matrix, we have so much equipment out,” but the new ICUs remind him of actual film sets—all new timber and 
                     exposed sheetrock walls, built ingeniously so that nurses and doctors can adjust medicines and settings without entering the room. <br>
                     The next day, a fellow paramedic spiked a fever and got tested. “The thought definitely crosses my mind. Am I carrying the virus? Am I bringing it 
