--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li>Lesson 09:<a href="lesson9/home/index.html">Home Page</a></li>
                 <li>Lesson 10:<a href="lesson10/preston-10.html">Preston Weather API</a></li>
                 <li>Lesson 11:<a href="lesson11/lesson9/home/index.html">Weather Outlet Final</a></li>
-
+                <li>Lesson 12:<a href="lesson12/activity/index.html">SASS Tutorial Activity</a></li>
             </ul>
         </main>
     <footer>
