--- a/lesson12/home.html
+++ b/lesson12/home.html
@@ -20,10 +20,10 @@
         <ul class="navigation">
             <li><a class="ham" href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
             <li><a class="current" href="#">Home</a></li>
-            <li><a href="">Rentals</a></li>
-            <li><a href="">Tours</a></li>
-            <li><a href="">Reservation</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="rental.html">Rentals</a></li>
+            <li><a href="tours.html">Tours</a></li>
+            <li><a href="reservation.html">Reservation</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <main>
@@ -78,10 +78,14 @@
         <section>
             <h3>~Scoots Services</h3>
             <img src="images/collage.png" class="collage" alt="rental">
+            <div class="rent">
+            <img src="images/jeep.jpg" class="rent1" alt="jeep">
+            <img src="images/scooter.jpg" class="rent2" alt="scooter">
+            <img src="images/atv.jpg" class="rent3" alt="atv">
+            </div>
             <p class="article">
                 Explore the island with our latest models of Honda Scooters, ATV's,<br> & Jeep Wranglers!<br><br>
-                Don't forget to check out our tours for Jeep and ATV excursions.<br>
-                What better way to see the island than with the locals!
+                Don't forget to check out our Tours!<br> It has a list of "Must Do" on your vacation.<br>
                 <div class="button-wrapper">
                     <a class="button text" href="reservation.html">Reserve Today</a>
                 </div></p>
@@ -93,12 +97,12 @@
         </section>
         <h3>Contact Us</h3>
         <section class="contact">
-            <p><img src="images/map1.JPG" class="port" alt="port">    
+            <p><img src="images/map1.JPG" class="port" alt="port"><br>  
             Av.Rafael E. Melgar, Centro,<br> 77600
             San Miguel de Cozumel, Q.R., Mexico<br>
             <span>&#x1F4F1;1-987-1SC-OOTS</span><br>
             scoots@gmail.com</p>
-            <p><img src="images/map2.JPG" class="ferry" alt="ferry">
+            <p><img src="images/map2.JPG" class="ferry" alt="ferry"><br>
             Carretera Chankanaab km 4.5, <br>Carretera Costera Sur, 77600<br>
             San Miguel de Cozumel, Q.R., Mexico<br>
             <span>&#x1F4F1;1-987-2SC-OOTS</span><br>
