--- a/lesson12/home.html
+++ b/lesson12/home.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home Page</title>
-    <meta name="description" content="WDD230 Spring 2020 Final Project-Scoots Rental">
+    <meta name="description" content="Has intro to business and summary of services.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
@@ -97,12 +97,12 @@
         </section>
         <h3>Contact Us</h3>
         <section class="contact">
-            <p><img src="images/map1.JPG" class="port" alt="port"><br>  
+            <p>  
             Av.Rafael E. Melgar, Centro,<br> 77600
             San Miguel de Cozumel, Q.R., Mexico<br>
             <span>&#x1F4F1;1-987-1SC-OOTS</span><br>
             scoots@gmail.com</p>
-            <p><img src="images/map2.JPG" class="ferry" alt="ferry"><br>
+            <p>
             Carretera Chankanaab km 4.5, <br>Carretera Costera Sur, 77600<br>
             San Miguel de Cozumel, Q.R., Mexico<br>
             <span>&#x1F4F1;1-987-2SC-OOTS</span><br>
@@ -114,7 +114,7 @@
         <p class="foot">&copy;~Scoots | Attributions | Chelsea Thomson<br>
             <span id="date"></span>
     </footer>
-    <script src="javascript/java.js"></script>
+    <script src="javascript/main.js"></script>
     <script src="javascript/weatherapi.js"></script>
     <script src="javascript/forecast.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
