--- a/lesson12/thanks.html
+++ b/lesson12/thanks.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Reservation Page</title>
-    <meta name="description" content="WDD230 Spring 2020 Final Project-Scoots Rental">
+    <title>Confirmation Page</title>
+    <meta name="description" content="Confirm Reservation and deposit reminder">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
@@ -37,6 +37,6 @@
        <p class="foot">&copy;~Scoots | Attributions | Chelsea Thomson<br> 
        <span id="date"></span>
     </footer>         
-        <script src="javascript/java.js"></script>
+        <script src="javascript/main.js"></script>
     </body>
 </html>
