--- a/lesson12/reservation.html
+++ b/lesson12/reservation.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Reservation Page</title>
-    <meta name="description" content="WDD230 Spring 2020 Final Project-Scoots Rental">
+    <meta name="description" content="Rental Agreement and form to Reserve vehicles.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
@@ -90,7 +90,7 @@
         <p class="foot">&copy;~Scoots | Attributions | Chelsea Thomson<br>
             <span id="date"></span>
     </footer>
-    <script src="javascript/java.js"></script>
+    <script src="javascript/main.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script>
         WebFont.load({
