fixed error in textarea

--- a/lesson12/reservation.html
+++ b/lesson12/reservation.html
@@ -81,7 +81,7 @@
             </fieldset>
             <fieldset>
                 <legend>List accomidations needed here<br> or any further information.</legend>
-                <label class="top"><textarea name="comment" rows="4" cols="50"></textarea></label> 
+                <textarea name="comment" rows="4" cols="60"></textarea>
             </fieldset><br>
             <input type="submit" value="Submit" class="submitBtn">
         </form>    
