--- a/lesson12/reservation.html
+++ b/lesson12/reservation.html
@@ -20,10 +20,10 @@
         <ul class="navigation">
             <li><a class="ham" href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
             <li><a href="home.html">Home</a></li>
-            <li><a href="">Rentals</a></li>
-            <li><a href="">Tours</a></li>
+            <li><a href="rental.html">Rentals</a></li>
+            <li><a href="tours.html">Tours</a></li>
             <li><a class="current" href="#">Reservation</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <main>
