--- a/lesson12/contact.html
+++ b/lesson12/contact.html
@@ -20,9 +20,9 @@
         <ul class="navigation">
             <li><a class="ham" href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
             <li><a href="home.html">Home</a></li>
+            <li><a href="tours.html">Tours</a></li>
             <li><a href="rental.html">Rentals</a></li>
             <li><a href="reservation.html">Reservations</a></li>
-            <li><a href="tours.html">Tours</a></li>
             <li><a class="current" href="#">Contact</a></li>
         </ul>
     </nav>
@@ -31,6 +31,35 @@
             <picture>
                 <img src="images/cozumelhero.jpg" class="hero" alt="ocean">
             </picture>
+            <h3>Rental Q & A ?</h3>
+            <div class="qa">
+                <p>
+                    Q: Do I have to drop off my rental at the same location?<br>
+                    <span style="color: #ffd08a;">A: No, it is free to drop off at either location.</span><br><br>
+
+                    Q: Is there an after hours drop off available?<br>
+                    <span style="color: #ffd08a;">A: No. We understand things happen sometimes and are unable to make
+                        it.
+                        We will work it out depending on circumstances.</span><br><br>
+
+                    Q: How old do you need to be to rent?<br>
+                    <span style="color: #ffd08a;">A: Need to be 21+, but anyone under 12 cannot ride the
+                        scooters.</span><br><br>
+
+                    Q: Cancelation Notice to get a refund?<br>
+                    <span style="color: #ffd08a;">A. We need a 24 hr notice.</span><br><br>
+
+                    Q: What are the benefits of reserving vs walk-in?<br>
+                    <span style="color: #ffd08a;">A: You get a little discount and guarentee vehicle. Walk-in will only
+                        get what
+                        is available.</span><br><br>
+
+                    Q: Do you offer tours?<br>
+                    <span style="color: #ffd08a;">A: We do not due to being a small shop, but we have connections with
+                        local
+                        Tours and will guide you to the best.</span><br><br>
+                </p>
+            </div>
             <h3>Contact Us</h3>
             <section class="contact">
                 <div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3736.8592000464205!2d-86.95296768255619!3d20.5119974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
@@ -38,40 +67,46 @@
                 " width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
                         tabindex="0"></iframe><br>
                     <p>
-                    ~Scoots<br>
-                    Av. Rafael E. Melgar, Centro, 77600<br>
-                    San Miguel de Cozumel, Q.R., Mexico
-                    <span>&#x1F4F1;1-987-1SC-OOTS</span><br>
-                    scoots@gmail.com<br>
-                    </p>    
+                        ~Scoots<br>
+                        Av. Rafael E. Melgar, Centro, 77600<br>
+                        San Miguel de Cozumel, Q.R., Mexico
+                        <span>&#x1F4F1;1-987-1SC-OOTS</span><br>
+                        scoots@gmail.com<br>
+                    </p>
                 </div>
                 <div><iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14950.656854719238!2d-86.9823832302246!3d20.478980300000014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
                 1!3m3!1m2!1s0x8f4e574e45d94f5f%3A0x33e0a37b1a48073f!2sCruise%20Ship%20Terminal%2C%20Cozumel%2C%20Mexico!5e0!3m2!1sen!2sus!4v1594593391829!5m2!1sen!2sus"
                         width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""
                         aria-hidden="false" tabindex="0"></iframe><br>
-                    <p>        
-                    ~Scoots<br>
-                    Carretera Chankanaab km 4.5, Carretera Costera Sur, 77600<br>
-                    San Miguel de Cozumel, Q.R., Mexico
-                    <span>&#x1F4F1;1-987-2SC-OOTS</span><br>
-                    scoots@gmail.com
+                    <p>
+                        ~Scoots<br>
+                        Carretera Chankanaab km 4.5, Carretera Costera Sur, 77600<br>
+                        San Miguel de Cozumel, Q.R., Mexico
+                        <span>&#x1F4F1;1-987-2SC-OOTS</span><br>
+                        scoots@gmail.com
                     </p>
                 </div>
             </section>
+        </div>
     </main>
     <footer>
         <p class="foot">&copy;~Scoots | Attributions | Chelsea Thomson<br>
             <span id="date"></span>
     </footer>
     <script src="javascript/main.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" style="font-display: auto;"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script>
         WebFont.load({
-            google:{families:['Staatliches']}});
-            WebFont.load({
-            google:{families:['Barlow']}});    
-
+            google: {
+                families: ['Staatliches']
+            }
+        });
+        WebFont.load({
+            google: {
+                families: ['Barlow']
+            }
+        });
     </script>
 </body>
 
