--- a/lesson12/rental.html
+++ b/lesson12/rental.html
@@ -31,8 +31,11 @@
             <thead>
                 <tr>
                     <th>Vehicle</th>
-                    <th>Reserved</th>
-                    <th>Walk In</th>
+                    <th># Peoples</th>
+                    <th>Reserved<br>
+                    Half (H) & Full (F)</th>
+                    <th>Walk In<br>
+                    Half (H) & Full (F)</th>
                 </tr>
             </thead>
             <tbody>
