--- a/lesson12/rental.html
+++ b/lesson12/rental.html
@@ -27,6 +27,9 @@
         </ul>
     </nav>
     <main>
+        <h1>Rentals and Pricing</h1>
+        <p>Rental prices are subject to change due to exconomy cost increase.<br> 
+            All reservations made will be guaranteed price. </p>
         <table>
             <thead>
                 <tr>
